[package]
name = "completable_future"
version = "0.1.0"
authors = ["tiden <tiden111@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tiden0614/completable-future-rs/tree/0.1.x"
description = """
CompletableFuture for Rust
"""

[dependencies]
futures = "^0.1.16"

[dev-dependencies]
tokio = "^0.1.6"