[package]
name = "completable_future"
version = "0.3.0"
authors = ["tiden <tiden111@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tiden0614/completable-future-rs"
description = """
CompletableFuture for Rust
"""

[dependencies]
futures = "*"
